adjust font size

--- a/oobe_qt/door_close_window.ui
+++ b/oobe_qt/door_close_window.ui
@@ -1844,7 +1844,7 @@ color:darkgrey
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>4</number>
          </property>
          <property name="iconSize">
           <size>
@@ -2821,18 +2821,18 @@ Otherwise each emergency call will cost $75.</string>
           <attribute name="title">
            <string>Power</string>
           </attribute>
-          <widget class="QWidget" name="verticalLayoutWidget_15">
+          <widget class="QWidget" name="verticalLayoutWidget_14">
            <property name="geometry">
             <rect>
-             <x>20</x>
-             <y>20</y>
+             <x>19</x>
+             <y>29</y>
              <width>741</width>
-             <height>311</height>
+             <height>301</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_17">
+           <layout class="QVBoxLayout" name="verticalLayout_21">
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_35">
+             <layout class="QHBoxLayout" name="horizontalLayout_23">
               <item>
                <widget class="QLabel" name="activeHoursLabel">
                 <property name="font">
@@ -2944,9 +2944,9 @@ Otherwise each emergency call will cost $75.</string>
              </layout>
             </item>
             <item>
-             <layout class="QVBoxLayout" name="verticalLayout_33">
+             <layout class="QVBoxLayout" name="verticalLayout_56">
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_36">
+               <layout class="QHBoxLayout" name="horizontalLayout_34">
                 <item>
                  <widget class="QLabel" name="enablePowerSavingLabel">
                   <property name="font">
@@ -3020,49 +3020,25 @@ color:white;
                </layout>
               </item>
               <item>
-               <widget class="QLabel" name="label_14">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>44</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <pointsize>9</pointsize>
-                  <bold>false</bold>
-                 </font>
-                </property>
+               <widget class="QLabel" name="label_16">
                 <property name="styleSheet">
                  <string notr="true">color:lightgrey</string>
                 </property>
                 <property name="text">
-                 <string>Turn off the display outside active hours. 
+                 <string>Turn off the display outside active hours.
 Display will be turned on automatically when door opens.</string>
-                </property>
-                <property name="textFormat">
-                 <enum>Qt::PlainText</enum>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-                </property>
-                <property name="buddy">
-                 <cstring>enablePowerSavingCheckBox</cstring>
                 </property>
                </widget>
               </item>
              </layout>
             </item>
             <item>
-             <layout class="QVBoxLayout" name="verticalLayout_18">
+             <layout class="QVBoxLayout" name="verticalLayout_57">
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_38">
+               <layout class="QHBoxLayout" name="horizontalLayout_24">
                 <item>
                  <widget class="QLabel" name="label_13">
                   <property name="font">
@@ -3136,36 +3112,16 @@ color:white;
                </layout>
               </item>
               <item>
-               <widget class="QLabel" name="label_19">
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>44</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <pointsize>9</pointsize>
-                 </font>
-                </property>
+               <widget class="QLabel" name="label_15">
                 <property name="styleSheet">
                  <string notr="true">color:lightgrey</string>
                 </property>
                 <property name="text">
                  <string>Use fan to cool down the CPU.
-May lead to better performance.</string>
-                </property>
-                <property name="textFormat">
-                 <enum>Qt::PlainText</enum>
-                </property>
-                <property name="scaledContents">
-                 <bool>false</bool>
+Lead to better performance and louder noise.</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-                </property>
-                <property name="buddy">
-                 <cstring>enableActiveCoolingCheckBox</cstring>
                 </property>
                </widget>
               </item>
@@ -3175,9 +3131,6 @@ May lead to better performance.</string>
              <spacer name="verticalSpacer_9">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
