--- a/oobe_qt/door_close_window.ui
+++ b/oobe_qt/door_close_window.ui
@@ -38,7 +38,7 @@
    <string>Internet-based Naloxone Safety Kit</string>
   </property>
   <property name="autoFillBackground">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget {
@@ -291,9 +291,15 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>781</width>
-      <height>421</height>
+      <width>780</width>
+      <height>420</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
@@ -1884,7 +1890,7 @@ color:darkgrey
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>4</number>
+          <number>1</number>
          </property>
          <property name="iconSize">
           <size>
@@ -2039,10 +2045,10 @@ color:darkgrey
           <widget class="QWidget" name="verticalLayoutWidget_10">
            <property name="geometry">
             <rect>
-             <x>18</x>
-             <y>21</y>
-             <width>741</width>
-             <height>341</height>
+             <x>8</x>
+             <y>11</y>
+             <width>761</width>
+             <height>455</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_49">
@@ -2194,9 +2200,6 @@ QSlider::handle:horizontal {
                   <property name="alignment">
                    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
                   </property>
-                  <property name="buddy">
-                   <cstring>naloxoneExpirationDateEdit</cstring>
-                  </property>
                  </widget>
                 </item>
                 <item>
@@ -2213,27 +2216,12 @@ QSlider::handle:horizontal {
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QDateEdit" name="naloxoneExpirationDateEdit">
+                 <widget class="QCalendarWidget" name="naloxoneExpirationDateEdit">
                   <property name="minimumSize">
                    <size>
                     <width>380</width>
-                    <height>30</height>
+                    <height>240</height>
                    </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
-QCalendarWidget QWidget { alternate-background-color: rgb(50, 50, 50); }</string>
-                  </property>
-                  <property name="displayFormat">
-                   <string>M/d/yy</string>
-                  </property>
-                  <property name="calendarPopup">
-                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -2264,10 +2252,10 @@ QCalendarWidget QWidget { alternate-background-color: rgb(50, 50, 50); }</string
           <widget class="QWidget" name="verticalLayoutWidget_19">
            <property name="geometry">
             <rect>
-             <x>20</x>
-             <y>20</y>
-             <width>741</width>
-             <height>341</height>
+             <x>10</x>
+             <y>10</y>
+             <width>761</width>
+             <height>371</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -2528,11 +2516,17 @@ your account.</string>
           <widget class="QScrollArea" name="scrollArea_2">
            <property name="geometry">
             <rect>
-             <x>9</x>
-             <y>9</y>
-             <width>761</width>
-             <height>351</height>
+             <x>0</x>
+             <y>0</y>
+             <width>780</width>
+             <height>380</height>
             </rect>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
            </property>
            <property name="styleSheet">
             <string notr="true">QScrollBar {
@@ -2556,6 +2550,9 @@ QScrollBar::sub-line:vertical {
       background: none;
 }</string>
            </property>
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
+           </property>
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
@@ -2564,8 +2561,8 @@ QScrollBar::sub-line:vertical {
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>744</width>
-              <height>482</height>
+              <width>765</width>
+              <height>398</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_44">
@@ -2852,14 +2849,14 @@ Otherwise each emergency call will cost $75. Details =&gt;</string>
                   <widget class="QLabel" name="twilioAddressWarningQrCode">
                    <property name="minimumSize">
                     <size>
-                     <width>150</width>
-                     <height>150</height>
+                     <width>100</width>
+                     <height>100</height>
                     </size>
                    </property>
                    <property name="maximumSize">
                     <size>
-                     <width>150</width>
-                     <height>150</height>
+                     <width>100</width>
+                     <height>100</height>
                     </size>
                    </property>
                    <property name="text">
@@ -2898,10 +2895,10 @@ Otherwise each emergency call will cost $75. Details =&gt;</string>
           <widget class="QWidget" name="verticalLayoutWidget_14">
            <property name="geometry">
             <rect>
-             <x>19</x>
-             <y>19</y>
-             <width>741</width>
-             <height>341</height>
+             <x>9</x>
+             <y>9</y>
+             <width>761</width>
+             <height>371</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_21">
@@ -3252,10 +3249,10 @@ Lead to better performance and louder noise.</string>
           <widget class="QScrollArea" name="scrollArea">
            <property name="geometry">
             <rect>
-             <x>9</x>
-             <y>9</y>
-             <width>761</width>
-             <height>351</height>
+             <x>0</x>
+             <y>0</y>
+             <width>780</width>
+             <height>380</height>
             </rect>
            </property>
            <property name="styleSheet">
@@ -3280,6 +3277,9 @@ QScrollBar::sub-line:vertical {
       background: none;
 }</string>
            </property>
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
+           </property>
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
@@ -3287,69 +3287,84 @@ QScrollBar::sub-line:vertical {
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>0</y>
-              <width>744</width>
-              <height>553</height>
+              <y>-170</y>
+              <width>765</width>
+              <height>550</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_39">
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_20">
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <layout class="QVBoxLayout" name="verticalLayout_17">
                  <item>
-                  <widget class="QLabel" name="passcodeLabel">
-                   <property name="font">
-                    <font>
-                     <pointsize>16</pointsize>
-                    </font>
-                   </property>
-                   <property name="styleSheet">
-                    <string notr="true">color:white</string>
-                   </property>
-                   <property name="text">
-                    <string>&amp;Admin Passcode</string>
-                   </property>
-                   <property name="buddy">
-                    <cstring>passcodeLineEdit</cstring>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <spacer name="horizontalSpacer">
-                   <property name="orientation">
-                    <enum>Qt::Horizontal</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>40</width>
-                     <height>20</height>
-                    </size>
-                   </property>
-                  </spacer>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="passcodeLineEdit">
-                   <property name="minimumSize">
-                    <size>
-                     <width>380</width>
-                     <height>30</height>
-                    </size>
-                   </property>
-                   <property name="font">
-                    <font>
-                     <pointsize>16</pointsize>
-                    </font>
-                   </property>
-                   <property name="styleSheet">
-                    <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+                  <layout class="QHBoxLayout" name="horizontalLayout_4">
+                   <item>
+                    <widget class="QLabel" name="passcodeLabel">
+                     <property name="font">
+                      <font>
+                       <pointsize>16</pointsize>
+                      </font>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color:white</string>
+                     </property>
+                     <property name="text">
+                      <string>&amp;Admin Passcode</string>
+                     </property>
+                     <property name="buddy">
+                      <cstring>passcodeLineEdit</cstring>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <spacer name="horizontalSpacer">
+                     <property name="orientation">
+                      <enum>Qt::Horizontal</enum>
+                     </property>
+                     <property name="sizeHint" stdset="0">
+                      <size>
+                       <width>40</width>
+                       <height>20</height>
+                      </size>
+                     </property>
+                    </spacer>
+                   </item>
+                   <item>
+                    <widget class="QLineEdit" name="passcodeLineEdit">
+                     <property name="minimumSize">
+                      <size>
+                       <width>380</width>
+                       <height>30</height>
+                      </size>
+                     </property>
+                     <property name="font">
+                      <font>
+                       <pointsize>16</pointsize>
+                      </font>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
 </string>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                     <property name="echoMode">
+                      <enum>QLineEdit::Password</enum>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="label_14">
+                   <property name="styleSheet">
+                    <string notr="true">color:yellow</string>
                    </property>
                    <property name="text">
-                    <string/>
-                   </property>
-                   <property name="echoMode">
-                    <enum>QLineEdit::Password</enum>
+                    <string>Warning: Leave admin passcode empty will nullify
+naloxone passcode as well.</string>
                    </property>
                   </widget>
                  </item>
@@ -3833,7 +3848,7 @@ color:white;
                     <string>&amp;Naloxone Passcode</string>
                    </property>
                    <property name="buddy">
-                    <cstring>passcodeLineEdit_2</cstring>
+                    <cstring>naloxonePasscodeLineEdit</cstring>
                    </property>
                   </widget>
                  </item>
@@ -3851,7 +3866,7 @@ color:white;
                   </spacer>
                  </item>
                  <item>
-                  <widget class="QLineEdit" name="passcodeLineEdit_2">
+                  <widget class="QLineEdit" name="naloxonePasscodeLineEdit">
                    <property name="minimumSize">
                     <size>
                      <width>380</width>
